fix spacing issue

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,9 +18,9 @@
     font-size: 42px;
 }
 
-/* .animation-conatiner{
-    width: 300px;
-} */
+.animation-conatiner{
+    width: 200px;
+}
 
 .section-contianer{
     flex:1
@@ -28,8 +28,8 @@
 
 .image-container{
     height: 336px;
-    position: relative;
     width: 0;
+    position: relative;
     display: none;
 }
 
@@ -38,11 +38,10 @@
     opacity: 0;
 }
 .userTextActive  {
-    filter: none;
     opacity: 1;
-    position: relative;
+    /* position: relative; */
     transform: translate3d(0,-30px,0);
-    transition: linear 10s ease 1s;
+    transition: linear 2s ease 1s;
     transition-property: opacity,transform;
     margin-top: 10px;
     z-index: 1;
@@ -51,14 +50,12 @@
     opacity: 0;
 }
  .correctionActive{
-    filter: none;
      border-radius: 10px;
     box-shadow: 0 14px 55px rgb(109 117 141 / 20%);
-    filter: alpha(opacity=0);
     opacity: 1;
     position: absolute;
     transform: translate3d(0,-30px,0);
-    transition: linear 10s ease 1s;
+    transition: linear 2s ease 1s;
     transition-property: opacity,transform;
     z-index: 2;
     bottom: 0px;
@@ -128,52 +125,7 @@
   height: 2px;
 }
 
-/* @media only screen  and (max-width:576px){
-    .box{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        padding: 20px;
-    }
-    .animation-conatiner {
-        -moz-box-align: start;
-        -moz-box-pack: start;
-        -ms-flex-align: start;
-        -ms-flex-pack: start;
-        -o-box-align: start;
-        -o-box-pack: start;
-        -webkit-align-items: start;
-        -webkit-box-align: start;
-        -webkit-box-pack: start;
-        -webkit-justify-content: start;
-        align-items: start;
-        display: -webkit-box;
-        display: -moz-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: box;
-        display: flex;
-        flex-direction: row;
-        height: 100%;
-        justify-content: start;
-        min-width: 150px;
-        width:150px;
-    }
-    .side-item{
-        width: 200px;
-        max-width: 200px;
-        display: flex;
-        justify-content: center;
-    }
-    /* .image-container{ */
-        /* display: flex;
-        justify-content: center;
-        width: 640px; */
-        /* height: 640px; */
-    /* } */
-    
-   
-/* } */ 
+
 @media only screen and (max-width:992px){
     .box{
         display: flex;
@@ -182,9 +134,9 @@
         align-items: center;
         padding: 20px;
     }
-    /* .animation-conatiner{
-        width: 150px;
-    } */
+    .animation-conatiner{
+        width: unset;
+    }
     .image-container{
         width: unset;
     }
